Integrated Gemini AI for mood analysis and the endpoint is set too. Check the readme for further information and details. Cleaned up previous project's residue too.

--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -72,3 +72,9 @@ OPENAI_API_KEY=
 OPENAI_CHAT_MODEL=gpt-oss-20b
 OPENAI_STREAM_MODEL=gpt-oss-120b
 OPENAI_SYSTEM_PROMPT=
+
+GOOGLE_GENAI_API_KEY=
+GOOGLE_GENAI_MODEL=gemini-2.5-flash
+
+# After updating .env values, clear Laravel caches locally:
+# php artisan config:clear && php artisan cache:clear
