Added JWT, Fahry cek guidenya buat implementasiinnya

--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -76,5 +76,10 @@ OPENAI_SYSTEM_PROMPT=
 GOOGLE_GENAI_API_KEY=
 GOOGLE_GENAI_MODEL=gemini-2.5-flash
 
+JWT_SECRET=
+JWT_TTL=60
+JWT_REFRESH_TTL=20160
+JWT_BLACKLIST_ENABLED=true
+
 # After updating .env values, clear Laravel caches locally:
 # php artisan config:clear && php artisan cache:clear
