Overhaul banyak, ada dashboard + note page dan update sistematis backend

--- a/laravel/.env.example
+++ b/laravel/.env.example
@@ -62,24 +62,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
-FRONTEND_ORIGINS=http://localhost:5173,http://localhost:3000
+FRONTEND_ORIGINS=http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173
 
-OMDB_API_BASE_URL=http://www.omdbapi.com/?i=tt3896198&apikey={insert_here}
-OMDB_API_KEY=
+OMDB_API_BASE_URL=http://www.omdbapi.com/?i=tt3896198&apikey=xxxxxxxx
+OMDB_API_KEY=   
 
-OPENAI_API_BASE_URL=https://<your-worker>.workers.dev
-OPENAI_API_KEY=
-OPENAI_CHAT_MODEL=gpt-oss-20b
-OPENAI_STREAM_MODEL=gpt-oss-120b
-OPENAI_SYSTEM_PROMPT=
-
-GOOGLE_GENAI_API_KEY=
+GOOGLE_GENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 GOOGLE_GENAI_MODEL=gemini-2.5-flash
-
-JWT_SECRET=
-JWT_TTL=60
-JWT_REFRESH_TTL=20160
-JWT_BLACKLIST_ENABLED=true
-
-# After updating .env values, clear Laravel caches locally:
-# php artisan config:clear && php artisan cache:clear
