--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -3,12 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.13.3",
+    "@chakra-ui/icons": "^2.2.4",
+    "@chakra-ui/react": "^2.10.9",
+    "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.13.0",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.10.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "react-router-dom": "^6.28.1",
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
