--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -1,44 +1,7 @@
 {
-  "name": "uts_sem5",
-  "version": "0.1.0",
-  "private": true,
   "dependencies": {
-    "@chakra-ui/icons": "^2.2.4",
-    "@chakra-ui/react": "^2.10.9",
     "@emotion/react": "^11.14.0",
-    "@emotion/styled": "^11.13.0",
-    "date-fns": "^4.1.0",
-    "framer-motion": "^12.10.0",
-    "react": "^19.2.0",
-    "react-dom": "^19.2.0",
-    "react-router-dom": "^6.28.1",
-    "web-vitals": "^2.1.4"
-  },
-  "devDependencies": {
-    "@testing-library/dom": "^10.4.1",
-    "@testing-library/jest-dom": "^6.9.1",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^5.4.8"
-  },
-  "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "vite build",
-    "preview": "vite preview",
-    "test": "echo \"Configure Vitest or Jest before running tests\" && exit 0"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "framer-motion": "^12.23.24",
+    "recharts": "^3.4.1"
   }
 }
