--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -24,8 +24,8 @@
     "vite": "^5.4.8"
   },
   "scripts": {
-    "dev": "vite",
-    "start": "vite",
+  "dev": "vite --port 5173 --strictPort",
+  "start": "vite --port 5173 --strictPort",
     "build": "vite build",
     "preview": "vite preview",
     "test": "echo \"Configure Vitest or Jest before running tests\" && exit 0"
