--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -9,6 +9,8 @@
     "@emotion/styled": "^11.13.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.28.1",
