--- a/expressJS/package.json
+++ b/expressJS/package.json
@@ -13,6 +13,7 @@
     "@grpc/grpc-js": "^1.9.0",
     "@grpc/proto-loader": "^0.7.8",
     "express": "^4.18.2",
+    "uts_sem5-workspace": "file:..",
     "ws": "^8.18.3"
   },
   "devDependencies": {
