--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "private": true,
   "description": "Workspace runner to start Laravel, Express WebSocket and React dev server together",
   "scripts": {
-    "dev": "concurrently \"cd laravel && php artisan serve --host=127.0.0.1 --port=8000\" \"cd expressJS && npm run server:start\" \"cd reactjs && npm run dev\"",
+    "dev": "concurrently \"cd laravel && php artisan serve --host=127.0.0.1 --port=8000\" \"node ./scripts/start-envoy.js\" \"cd expressJS && npm run server:start\" \"cd expressJS && npm run grpc:start\" \"cd reactjs && npm run dev\"",
+    "dev:simple": "concurrently \"cd laravel && php artisan serve --host=127.0.0.1 --port=8000\" \"cd expressJS && npm run server:start\" \"cd reactjs && npm run dev\"",
+    "envoy:start": "node ./scripts/start-envoy.js",
+    "envoy:stop": "node ./scripts/stop-envoy.js",
     "install-all": "npm --prefix expressJS install && npm --prefix reactjs install && (cd laravel && echo 'Run composer install in laravel if needed')",
     "gen:proto": "node ./scripts/gen-proto.js"
   },
