--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -9,13 +9,14 @@
     "@emotion/styled": "^11.13.0",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.24",
-    "google-protobuf": "^3.21.2",
+    "google-protobuf": "^3.21.4",
     "grpc-web": "^1.5.0",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.28.1",
-  "recharts": "^3.4.1",
-  "web-vitals": "^2.1.4"
+    "recharts": "^3.4.1",
+    "uts_sem5-workspace": "file:..",
+    "web-vitals": "^2.1.4"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.1",
