--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -24,13 +24,23 @@
     "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "vite": "^5.4.8"
+    "vite": "^5.4.8",
+    "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-refresh": "^0.4.6",
+    "prettier": "^3.2.5",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3"
   },
   "scripts": {
     "dev": "vite --port 5173 --strictPort",
     "start": "vite --port 5173 --strictPort",
     "build": "vite build",
     "preview": "vite preview",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --ext js,jsx --fix --report-unused-disable-directives || true",
+    "format": "prettier --write .",
     "test": "echo \"Configure Vitest or Jest before running tests\" && exit 0"
   },
   "browserslist": {
