fixing the whole codebase with incremental linting + added CI integration with docs

--- a/laravel/composer.json
+++ b/laravel/composer.json
@@ -65,6 +65,12 @@
         "test": [
             "@php artisan config:clear --ansi",
             "@php artisan test"
+        ],
+        "lint": [
+            "pint --test"
+        ],
+        "lint:fix": [
+            "pint"
         ]
     },
     "extra": {
