--- a/reactjs/package.json
+++ b/reactjs/package.json
@@ -11,6 +11,7 @@
     "framer-motion": "^12.23.24",
     "google-protobuf": "^3.21.4",
     "grpc-web": "^1.5.0",
+    "prop-types": "^15.8.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-router-dom": "^6.28.1",
@@ -38,8 +39,9 @@
     "start": "vite --port 5173 --strictPort",
     "build": "vite build",
     "preview": "vite preview",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 50",
     "lint:fix": "eslint . --ext js,jsx --fix --report-unused-disable-directives || true",
+    "lint:strict": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier --write .",
     "test": "echo \"Configure Vitest or Jest before running tests\" && exit 0"
   },
