--- a/expressJS/package.json
+++ b/expressJS/package.json
@@ -7,7 +7,10 @@
   "scripts": {
     "server:start": "node server/websocket-server.js",
     "server:dev": "nodemon --watch server --ext js --exec node server/websocket-server.js",
-    "grpc:start": "node grpc-server.js"
+    "grpc:start": "node grpc-server.js",
+    "lint": "eslint . --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint . --fix --report-unused-disable-directives || true",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.9.0",
@@ -17,6 +20,10 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
+    "prettier": "^3.2.5"
   }
 }
