--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./laravel
+        working-directory: ./backend
 
     steps:
     - uses: actions/checkout@v4
@@ -55,7 +55,7 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./reactjs
+        working-directory: ./frontend
 
     steps:
     - uses: actions/checkout@v4
@@ -65,10 +65,33 @@ jobs:
       with:
         node-version: '20'
         cache: 'npm'
-        cache-dependency-path: reactjs/package-lock.json
+        cache-dependency-path: frontend/package-lock.json
 
     - name: Install Dependencies
       # Using npm install because package-lock.json might be missing in repo
+      run: npm install
+
+    - name: Run Lint
+      run: npm run lint
+
+  websocket-lint:
+    name: WebSocket Service Lint
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./websocket-service
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: '20'
+        cache: 'npm'
+        cache-dependency-path: websocket-service/package-lock.json
+
+    - name: Install Dependencies
       run: npm install
 
     - name: Run Lint
