--- a/websocket-service/package.json
+++ b/websocket-service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "uts_sem5",
+  "name": "websocket-service",
   "version": "1.0.0",
   "description": "Workspace scripts for running the WebSocket server for Mood Journal",
   "type": "module",
@@ -20,10 +20,10 @@
     "ws": "^8.18.3"
   },
   "devDependencies": {
-    "nodemon": "^2.0.22",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
+    "nodemon": "^2.0.22",
     "prettier": "^3.2.5"
   }
 }
