Added python for AI service with gRPC, updated readme for better context, refactored some backend services for efficiency.

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -65,7 +65,12 @@ VITE_APP_NAME="${APP_NAME}"
 FRONTEND_ORIGINS=http://localhost:5173,http://localhost:3000,http://127.0.0.1:5173
 
 OMDB_API_BASE_URL=http://www.omdbapi.com/?i=tt3896198&apikey=xxxxxxxx
-OMDB_API_KEY=   
+OMDB_API_KEY=
 
 GOOGLE_GENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 GOOGLE_GENAI_MODEL=gemini-2.5-flash
+
+# AI gRPC Service (set AI_GRPC_ENABLED=true to use Python AI service)
+AI_GRPC_ENABLED=false
+AI_GRPC_HOST=localhost
+AI_GRPC_PORT=50052
