--- a/backend/composer.json
+++ b/backend/composer.json
@@ -10,6 +10,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "grpc/grpc": "^1.57",
+        "google/protobuf": "^4.28",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "maatwebsite/excel": "^3.1",
