--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -22,3 +22,8 @@
 Homestead.json
 Homestead.yaml
 Thumbs.db
+
+# IDE helpers (generated)
+_ide_helper.php
+_ide_helper_models.php
+.phpstorm.meta.php
