--- a/ai-service/requirements.txt
+++ b/ai-service/requirements.txt
@@ -2,3 +2,6 @@ grpcio>=1.60.0
 grpcio-tools>=1.60.0
 google-generativeai>=0.8.0
 python-dotenv>=1.0.0
+
+# Fun ML projects
+mysql-connector-python>=8.0.0
