--- a/backend/composer.json
+++ b/backend/composer.json
@@ -32,6 +32,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
+            "Ai\\": "app/Grpc/Ai/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
