--- a/backend/.env.example
+++ b/backend/.env.example
@@ -70,6 +70,10 @@ OMDB_API_KEY=
 GOOGLE_GENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 GOOGLE_GENAI_MODEL=gemini-2.5-flash
 
+LASTFM_API_KEY=
+LASTFM_API_SECRET=
+LASTFM_BASE_URI=https://ws.audioscrobbler.com/2.0/
+
 # AI gRPC Service (set AI_GRPC_ENABLED=true to use Python AI service)
 AI_GRPC_ENABLED=false
 AI_GRPC_HOST=localhost
