--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,32 @@
-node_modules
-/ai-service/__pycache__
+# Dependencies
+node_modules/
+/ai-service/__pycache__/
+/ai-service/venv/
+/backend/vendor/
+
+# Environment files
+.env
+.env.local
+.env.*.local
+
+# Build outputs
+/frontend/dist/
+/frontend/build/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+Thumbs.db
+
+# Logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS
+.DS_Store
+Thumbs.db
