Update to reduce API call jadi 1 per generate

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -68,7 +68,7 @@ OMDB_API_BASE_URL=http://www.omdbapi.com/?i=tt3896198&apikey=xxxxxxxx
 OMDB_API_KEY=
 
 GOOGLE_GENAI_API_KEY=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
-GOOGLE_GENAI_MODEL=gemini-2.5-flash
+GOOGLE_GENAI_MODEL=gemini-2.5-flash-lite
 
 LASTFM_API_KEY=
 LASTFM_API_SECRET=
